# BowlingGame

./: CMakeLists.txt  README.md
Test/UnitTests/: BowlingGameIT.cpp  BowlingGameTest.cpp  CMakeLists.txt  FramesFunctionTest.cpp  PlayerFunctionTest.cpp
include/: BowlingFrames.h  BowlingGame.h  Constants.h  MyPlayer.h
src/: BowlingFrames.cpp  BowlingGame.cpp  MyPlayer.cpp  main.cpp
